# manage-employers-api

./: README.md  db.sqlite3  pyproject.toml  requirements.txt  runserver.py
api_rest/: models.py  serializers.py  urls.py  views.py
api_rest/migrations/: 0001_initial.py
api_root/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  models.py  serializers.py
core/migrations/: 0001_initial.py  0002_employer.py  0003_alter_employer_entry_date_alter_employer_exit_date_and_more.py
core/models/: __init__.py  company.py  employer.py  user.py
core/serializers/: __init__.py  company.py  employer.py  user.py
core/views/: __init__.py  company.py  employer.py  user.py
manager/: settings.py  urls.py
static/: staticfiles.json
